EXTRA_DIST = \
    ActionButton.png \
    ActionButtonPressed.png \
    Badge.png \
    Bandwidth.png \
    BottomBorder.png \
    ButtonBorder.png \
    CreateLarge.png \
    Create.png \
    DownloadBadge.png \
    Error.tiff \
    FilterBarBackground.png \
    FilterButtonOverLeft.png \
    FilterButtonOverMain.png \
    FilterButtonOverRight.png \
    FilterButtonPressedLeft.png \
    FilterButtonPressedMain.png \
    FilterButtonPressedRight.png \
    FilterButtonSelectedLeft.png \
    FilterButtonSelectedMain.png \
    FilterButtonSelectedRight.png \
    Filter.png \
    Globe.png \
    GreenDot.tiff \
    Info.png \
    Network.png \
    Open.png \
    PauseAll.png \
    PauseOff.png \
    PauseOn.png \
    PauseSelected.png \
    Preferences.png \
    PriorityHigh.png \
    PriorityLow.png \
    PriorityMixed.png \
    PriorityNone.png \
    PriorityNormal.png \
    RedDot.tiff \
    Remove.png \
    ResumeAll.png \
    ResumeNoWaitOff.png \
    ResumeNoWaitOn.png \
    ResumeOff.png \
    ResumeOn.png \
    ResumeSelected.png \
    RevealOff.png \
    RevealOn.png \
    SmallTurtle.png \
    SpeedLimitButtonBlue.png \
    SpeedLimitButtonGraphite.png \
    SpeedLimitButton.png \
    SpeedLimitButtonPressed.png \
    StatusBarBackground.png \
    StatusSep.png \
    Transfers.png \
    TransmissionDocument.icns \
    Transmission.icns \
    UploadBadge.png \
    YellowDot.tiff
